<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guessLocation.GuessLocationActivity"
    android:id="@+id/guessLocationLayout">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageToGuessCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageToGuess"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_descr_history_image"
            android:maxHeight="100dp"
            android:scaleType="fitCenter"
            tools:srcCompat="@tools:sample/backgrounds/scenic[0]" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/guess_location_score_back"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backToGuessPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/next_guess"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageToGuessCardZoomedIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/hotbarView"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="66dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:max="100"
        android:progress="100"
        android:progressTint="#FF0000"
        android:scaleX="2"
        android:scaleY="8"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/compassMode"
        app:layout_constraintEnd_toEndOf="@+id/compassMode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/compassMode" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/floating_point_margin"
        android:layout_marginBottom="@dimen/floating_point_margin"
        android:clickable="true"
        android:contentDescription="@string/content_descr_confirm_button_image"
        android:focusable="true"
        android:src="@drawable/ic_baseline_check_24"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/compassMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/floating_point_margin"
        android:layout_marginBottom="@dimen/floating_point_margin"
        android:clickable="true"
        android:contentDescription="@string/content_descr_compass_button_image"
        android:focusable="true"
        android:src="@drawable/ic_outline_explore_off_24"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageToGuessCardZoomedIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        >

        <ImageView
            android:id="@+id/imageToGuessZoomedIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_descr_history_image"
            android:scaleType="fitCenter"
            tools:srcCompat="@tools:sample/backgrounds/scenic[0]" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
