...
                "Swipe left to skip the actual image and search an other one."</string>
    <string name="bar_report">"This picture has been reported."</string>

    <!--Guess Location Strings-->
    <string name="finished_tour">Tour finished.\nWell done!</string>
    <string name="tour_score_text">%1$d/%2$d\nPictures found</string>
    <string name="guess_simple_mode">guess_simple_mode</string>
    <string name="guess_tour_mode">guess_tour_mode</string>
    <string name="content_descr_compass_button_image">This is the image shown on the compass button</string>
    <string name="content_descr_confirm_button_image">This is the image shown on the confirm button</string>
    <string name="mapClickOnCompassMode_confirm_title">You are in Compass Mode</string>
    <string name="mapClickOnCompassMode_confirm_message">In Compass Mode you are supposed to walk to the picture location you are currently guessing.\nExit the Compass Mode if you want to simply guess by clicking</string>
    <string name="guess_location_distance_meter">Distance: %1$d m</string>
...
